Add dummy menu for kubernetes
